--- a/package.json
+++ b/package.json
@@ -22,13 +22,21 @@
     "@vitejs/plugin-vue": "^1.1.5",
     "@vitejs/plugin-vue-jsx": "^1.1.6",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "electron": "^12.0.1",
     "electron-builder": "^22.10.5",
     "electron-dev-runner": "^1.0.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
     "sass": "^1.35.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "typescript": "^4.1.3",
     "vite": "^2.1.0",
-    "vue-tsc": "^0.0.8"
+    "vue-tsc": "^0.0.8",
+    "yorkie": "^2.0.0"
   },
   "license": "MIT",
   "author": {
@@ -53,5 +61,13 @@
     "files": [
       "dist/**/*"
     ]
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": "eslint --fix",
+    "*.{css,scss,vue}": "stylelint --fix",
+    "*": "prettier -w -u"
   }
 }
