--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@vicons/ionicons4": "^0.10.0",
+    "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vitejs/plugin-vue-jsx": "^1.1.6",
     "@vue/compiler-sfc": "^3.0.5",
