--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,9 @@
 {
-  "extends": ["stylelint-config-recommended", "stylelint-config-standard"]
+  extends: [
+    "stylelint-config-standard",
+    "stylelint-config-recommended-scss",
+    "stylelint-config-rational-order",
+  ],
+  plugin: ["stylelint-order", "stylelint-scss"],
+  rules: {}
 }
