--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "prettier": "^2.3.2",
     "sass": "^1.35.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-scss": "^4.3.0",
     "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.20.1",
     "typescript": "^4.1.3",
     "vite": "^2.1.0",
     "vite-plugin-md": "^0.6.7",
@@ -71,7 +74,8 @@
     ]
   },
   "gitHooks": {
-    "commit-msg": "node .commitlint.js"
+    "commit-msg": "node .commitlint.js",
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.{vue}": "eslint --fix",
