--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vicons/ionicons4": "^0.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "@vicons/ionicons4": "^0.11.0",
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vitejs/plugin-vue-jsx": "^1.1.6",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "electron": "^12.0.1",
+    "electron": "^14.0.0",
     "electron-builder": "^22.10.5",
     "electron-dev-runner": "^1.0.1",
     "eslint": "^7.29.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
@@ -42,11 +44,11 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.20.1",
-    "typescript": "^4.1.3",
-    "vite": "^2.1.0",
-    "vite-plugin-md": "^0.6.7",
-    "vite-plugin-pages": "^0.15.0",
-    "vue-tsc": "^0.0.8",
+    "typescript": "^4.4.2",
+    "vite": "^2.5.3",
+    "vite-plugin-md": "^0.11.0",
+    "vite-plugin-pages": "^0.18.0",
+    "vue-tsc": "^0.3.0",
     "yorkie": "^2.0.0"
   },
   "license": "MIT",
